# pytest-tdd

./: Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/tdd/: fizzbuzz.py
tdd/: fizzbuzz.py
tests/tdd/: test_fizzbuzz.py
